First adaptation on home and header and gramatical

--- a/css/footer.css
+++ b/css/footer.css
@@ -30,3 +30,11 @@
     font-size: 1.125rem;
     color: #8f8f8f;
 }
+@media (max-width:800px){
+    .copyright{
+        grid-column: 1;
+    }
+    .footer-container{
+        grid-template-columns:1fr;
+    }
+}
