--- a/css/introducao.css
+++ b/css/introducao.css
@@ -1,13 +1,21 @@
-.introduction{
+.background-header-main{
+    background:url('../img/primarias/bode_fundo_branco.jpg')no-repeat center center;
+    position: relative;  
+    background-size: cover;
+}
+.introduction {
     max-width: 1200px;
     padding:40px 20px;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 2fr;
     gap:100px;
-    align-items: center;
+    align-items: center !important;
+    position:relative;
+    text-align: center;
 }
 .introduction h1{
+    margin-top: 100px;
     font-size: 4.5em;
     line-height:1.2;
     margin-bottom:30px;
@@ -26,7 +34,7 @@
 }
 .introduction p{
     font-size: 1.5rem;
-    color: #525252;
+    color: #b8b8b8;
 }
 @media(max-width:1000px){
     .introduction h1{
@@ -35,9 +43,11 @@
 }
 @media(max-width:800px){
     .introduction {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 2fr;
         gap:40px;
-
+        align-items: center !important;
+        position:relative;
+        text-align: center;
     }
     .introduction h1{
         font-size: 2rem;
