--- a/css/experience.css
+++ b/css/experience.css
@@ -33,11 +33,11 @@
     content: "";
     position: absolute;
     display: block;
-    width: 4px;
+    width: 8px;
     height: 20px;
-    background:linear-gradient(#b6f829,#67dd0a);
+    background:linear-gradient(#946d51,#2f211a);
     top: 20px;
-    left: -4px;
+    left: -6px;
 }
 .enterprise-year{
     position: absolute;
