--- a/css/global.css
+++ b/css/global.css
@@ -23,3 +23,21 @@ img{
     word-break: break-all;
     line-height:1;
 }
+body::-webkit-scrollbar{
+    width:8px;
+}
+body::-webkit-scrollbar-track {
+    background: #141414 ;
+    padding: 2px;   /* color of the tracking area */
+}
+body::-webkit-scrollbar-thumb {
+    background-color: #946d51;    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+}
+* {
+    scrollbar-width: thin;          /* "auto" or "thin" */
+    scrollbar-color: #946d51 #141414;   /* scroll thumb and track */
+}
+html, body {
+    scroll-behavior: smooth;
+}
