--- a/css/header.css
+++ b/css/header.css
@@ -37,13 +37,30 @@
     }
 }
 .header-menu .customized-menu{
-    background:#b8b8b865;
+    background:#b8b8b890;
     border-radius: 4px;
     color:#000;
     padding:10px 10px;
     margin-top: 10px;
 }
 .header-menu .customized-menu:hover{
-    background:#fff;
-    color:#000;
+    background:#141414;
+    color:#fff;
+}
+@media (max-width:480px){
+    .header a{
+        background:#000;
+        color:#fff;
+        border-radius:4px;
+    }
+    .header-menu .customized-menu{
+        background:#fff;
+        border-radius: 4px;
+        color:#000;
+        padding:10px 20px;
+        justify-content: center;
+    }
+    .header img{
+        background:url('../img/cedro-logo.svg');
+    }
 }
