--- a/css/introducao.css
+++ b/css/introducao.css
@@ -1,7 +1,14 @@
-.background-header-main{
-    background:url('../img/primarias/bode_fundo_branco.jpg')no-repeat center center;
+/*.background-header-main{
+    background:url('../img/primarias/bode_perfil.jpg')no-repeat center center;
     position: relative;  
-    background-size: cover;
+    background-size: 100%;
+    max-width: 100%;
+}*/
+.background-header-main{
+    background:url('../img/primarias/bode_perfil-red.jpg') no-repeat center center;
+    max-width:100%;
+    height: 100%;
+    background-size: 100%;;
 }
 .introduction {
     max-width: 1200px;
@@ -15,13 +22,13 @@
     text-align: center;
 }
 .introduction h1{
-    margin-top: 100px;
+    margin-top: 50px;
     font-size: 4.5em;
     line-height:1.2;
-    margin-bottom:30px;
+    margin-bottom:80px;
     position:relative;
 }
-.introduction h1::before {
+/*.introduction h1::before {
     content: "";
     display: block;
     width: 130px;
@@ -31,7 +38,7 @@
     top:-15px;
     left: -40px;
     z-index: -1;
-}
+}*/
 .introduction p{
     font-size: 1.5rem;
     color: #b8b8b8;
@@ -64,5 +71,18 @@
     }
     .introduction img{
         display: none;
+    }
+}
+.introduction-description h1{
+    color: #000;
+    text-decoration: background #b8b8b865;
+    border-radius: 4px;;
+}
+@media(max-width:480px){
+    .background-header-main{
+        background: #141414;
+    }
+    .introduction-description h1{
+        color:#fff;
     }
 }
