--- a/css/header.css
+++ b/css/header.css
@@ -44,20 +44,50 @@
     margin-top: 10px;
 }
 .header-menu .customized-menu:hover{
-    background:#141414;
+    background:#000;
+    opacity: 1;
     color:#fff;
 }
+@media (max-width:800px){
+    .header a{
+        background:#000;
+        opacity: 0.8;
+        color:#fff;
+        border-radius:4px;
+    }
+    .header-menu li:hover{
+        background:#000;
+        border-radius: 4px;
+    }
+    .header-menu .customized-menu{
+        background:#fff;
+        border-radius: 4px;
+        margin: auto;
+        color:#000;
+        padding:20px 10px;
+        justify-content: center;
+    }
+}
+
 @media (max-width:480px){
     .header a{
         background:#000;
+        opacity: 0.8;
         color:#fff;
         border-radius:4px;
     }
     .header-menu .customized-menu{
         background:#fff;
+        margin: auto;
         border-radius: 4px;
         color:#000;
-        padding:10px 20px;
+        padding:20px 10px;
+        justify-content: center;
+    }
+    .header-menu .customized-menu:hover{
+        background:#000;
+        border-radius: 4px;
+        color:#fff;
         justify-content: center;
     }
     .header img{
