--- a/css/introducao.css
+++ b/css/introducao.css
@@ -5,10 +5,17 @@
     max-width: 100%;
 }*/
 .background-header-main{
-    background:url('../img/primarias/bode_perfil-red.jpg') no-repeat center center;
+    background:url('../img/primarias/new-background.jpg') no-repeat center center;
     max-width:100%;
-    height: 100%;
-    background-size: 100%;;
+    background-size: 100%;
+    margin: auto;
+}
+@media (max-width: 780px){
+    .background-header-main{
+        background-position: center top;
+        min-height: 100%;
+        background-size:cover;
+    }
 }
 .introduction {
     max-width: 1200px;
@@ -22,7 +29,7 @@
     text-align: center;
 }
 .introduction h1{
-    margin-top: 50px;
+    margin-top: 20px;
     font-size: 4.5em;
     line-height:1.2;
     margin-bottom:80px;
@@ -41,7 +48,8 @@
 }*/
 .introduction p{
     font-size: 1.5rem;
-    color: #b8b8b8;
+    color: #000;
+    margin-bottom: 60px;
 }
 @media(max-width:1000px){
     .introduction h1{
@@ -74,15 +82,27 @@
     }
 }
 .introduction-description h1{
-    color: #000;
+    color: #fff;
+    opacity: 0.7;
     text-decoration: background #b8b8b865;
     border-radius: 4px;;
 }
+.introduction-description {
+    color: #141414;
+    position: relative;
+}
 @media(max-width:480px){
-    .background-header-main{
-        background: #141414;
-    }
     .introduction-description h1{
         color:#fff;
     }
+}
+.dot{
+    background: #000;
+    height: 65px;
+    width: 12px;
+    top:295px;
+    left: 870px;
+    position: absolute;
+    font-size: 5rem;
+    opacity: 0.6 !important;
 }
