Favico e ajuste de padding na intro

--- a/css/introducao.css
+++ b/css/introducao.css
@@ -19,7 +19,7 @@
 }
 .introduction {
     max-width: 1200px;
-    padding:40px 20px;
+    /*padding:40px 20px;*/
     margin: 0 auto;
     display: grid;
     grid-template-columns: 2fr;
