--- a/css/introducao.css
+++ b/css/introducao.css
@@ -29,6 +29,7 @@
     text-align: center;
 }
 .introduction h1{
+    /*font-family: Josef;*/
     margin-top: 20px;
     font-size: 4.5rem;
     line-height:1.2;
@@ -49,7 +50,7 @@
 .introduction p{
     font-size: 1.5rem;
     color: #000;
-    margin-bottom: 60px;
+    margin-bottom: 80px;
 }
 @media(max-width:1000px){
     .introduction h1{
