--- a/css/header.css
+++ b/css/header.css
@@ -20,10 +20,13 @@
 .header-menu a{
     font-size: 1.25rem;
     line-height: 1.3;
-    padding: 20px 10px;
+    padding: 10px 10px;
     text-decoration: none;
-    color: #141414;
     display: block;
+    background:#b8b8b840;
+    margin-top: 10px;
+    color:#000;
+    border-radius: 4px;
 }
 @media (max-width: 800px){
     .header{
@@ -37,27 +40,36 @@
     }
 }
 .header-menu .customized-menu{
-    background:#b8b8b840;
+    background:#2f211a99;
     border-radius: 4px;
-    color:#000;
+    color:#866c57;
     padding:10px 10px;
     margin-top: 10px;
 }
 .header-menu .customized-menu:hover{
-    background:#00000085;
-    color:#fff;
+    background:#866c57;
+    color:#2f211a;
 }
 .header a:hover{
     background:#00000060;
     padding:10px 10px;
     margin-top: 10px;
-    color:#fff;
+    color:#e8e8e8;
     border-radius:4px;
 }
 @media (max-width:800px){
     .header a{
         background:#000;
+        padding:20px 10px;
+        margin-top: 0px;
         opacity: 0.8;
+        color:#fff;
+        border-radius:4px;
+    }
+    .header a:hover{
+        background:#00000060;
+        padding:20px 10px;
+        margin-top: 0px;
         color:#fff;
         border-radius:4px;
     }
@@ -80,6 +92,12 @@
         background:#000;
         opacity: 0.8;
         color:#fff;
+        border-radius:4px;
+    }
+    .header a:hover{
+        background:#00000060;
+        color:#fff;
+        margin-top: 0px;
         border-radius:4px;
     }
     .header-menu .customized-menu{
