--- a/css/experience.css
+++ b/css/experience.css
@@ -7,7 +7,7 @@
     gap:100px;
 }
 .experience .subtitle{
-    color: #e0e0e0;
+    color: #946D5180;
 }
 .experience-text{
     font-size:1.5rem;
@@ -33,11 +33,11 @@
     content: "";
     position: absolute;
     display: block;
-    width: 8px;
+    width: 4px;
     height: 20px;
     background:linear-gradient(#946d51,#2f211a);
     top: 20px;
-    left: -6px;
+    left: -4px;
 }
 .enterprise-year{
     position: absolute;
