--- a/css/footer.css
+++ b/css/footer.css
@@ -6,14 +6,34 @@
     padding: 120px 20px 60px 20px;
     margin: 0 auto;
     display:grid;
-    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap:100px;
     align-items: center;
     position: relative;
 }
 .footer-contact{
     position: relative;
-    grid-column: 4;
+    display:flex;
+    align-items: center;
+    background-color: #141414;
+    max-width: 540px;
+    border-left: solid 4px;
+    border-image: linear-gradient(
+      to bottom, 
+      #946d51, 
+      #2f211a
+    ) 1 90%;;
+    
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+.footer-lista{
+    border-left: solid 1px #2f211a80;
+    position: relative;
+    align-items: center;
+}
+.footer-lista li{
+    margin-left: 16px;
 }
 /*.footer-contact::before{
     content: "";
@@ -25,13 +45,12 @@
     border-radius: 50%;
 }*/
 .footer-container img{
-    margin-left: 50px;
+    margin-right: 16px;
+    margin-left: 16px;
     position:relative;
     flex-direction: row-reverse;
     position:relative;
     border-radius:50%;
-    border-style: dotted;
-    grid-column: 3;
     min-width:125px;
     max-height:125px;
 }
@@ -39,14 +58,14 @@
     font-size: 1.25rem;
     line-height: 1.33;
     color: #ccc;
-    grid-column: 1 / 3;
 }
 .footer-contact li{
     font-weight: bold;
-    font-size: 1.75rem;
+    font-size: 1.5rem;
     line-height: 1.1;
     color: #ffffff;
-    margin-bottom: 30px;
+    margin-top: 16px;
+    margin-bottom: 24px;
 }
 .footer-contact li a{
     color:#fff;
@@ -69,14 +88,13 @@
     .footer-container img{
         align-items:center;
         column-gap: 10px;
-        margin-top: 50px;
         grid-column: 1;
     }
     .footer-text{
         margin-top:-10px;
         grid-column:1;
     }
-    .footer-contact{
-        grid-column:1;
+    .footer-contact li{
+        font-size: 1.15rem;
     }
 }
