--- a/css/footer.css
+++ b/css/footer.css
@@ -27,11 +27,16 @@
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 }
-.footer-lista{
-    border-left: solid 1px #2f211a80;
+/*.footer-lista{
+    border-left: solid 4px;
+    border-image: linear-gradient(
+      to bottom, 
+      #2f211a, 
+      #946d51
+    ) 1 90%;;
     position: relative;
     align-items: center;
-}
+}*/
 .footer-lista li{
     margin-left: 16px;
 }
