--- a/css/graduation.css
+++ b/css/graduation.css
@@ -14,6 +14,10 @@
 .graduation .subtitle{
     color:#2F211A;
 }
+.graduation .subtitle{
+    background: url('../img/meio-brito.svg')no-repeat bottom left;
+    min-width: 100px;
+}
 .graduation-text{
     font-size:1.5rem;
     line-height:1.33;
